# vue3-fastapi-oath2-jwt-demo

./: .gitignore  README.md
backend/: db.py  main.py  models.py  pyproject.toml  transactions.py
backend/util/: connect_with_sqlalchemy.py  passwords.py
database/: init.sql
frontend/: package.json
frontend/src/: index.html  main.js
frontend/src/comps/: Login.vue  Logout.vue  UserAccount.vue
frontend/src/helper/: api.js  auth.js
frontend/src/pages/: Home.vue
setup/: commands
